--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vacation Planning</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MY Codepen Website</title>
 </head>
 <body>
-    This is my first HTML5 web page
+  
+  <h1>This is the main title</h1>
+  <h2>This is a subtitle</h2>
+  <h3>Yet another title</h3>
+  <h4>Even more titles</h4>
+  <h5>A smaller title</h5>
+  <h6>A not so important title</h6>
+  
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, iusto quia animi vel porro ducimus voluptatem architecto modi at in.</p>
+  
+  <a href="https://www.google.com" target="_blank">Go to Yahoo</a>
+  <br />
+  
+  <a href="https://www.google.com" target="_blank">
+  <img src="https://dummyimage.com/600x400/eb2873/0d0e12.jpg&text=My+Practice+Graphic" />
+  </a>
+ 
+  
 </body>
 </html>
