--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>MY Codepen Website</title>
 
   <!-- Local CSS-->
-   <link href="css/styles.css" />
+   <link href="css/styles.css" rel="stylesheet"/>
 </head>
 <body>
   
