--- a/index.html
+++ b/index.html
@@ -112,8 +112,12 @@
         <div class="col">
           Column three   
           </div>
-    </div>
+          <div class="col">
+            Column fourth
+            </div>
+      </div> 
   </div>
+
 </main>
 
   <footer>
