--- a/index.html
+++ b/index.html
@@ -108,16 +108,19 @@
     <div class="row">
       <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
         <i class="fa-solid fa-location-dot"></i>
-        <br/>Column one   
+        <br />Column one   
       </div>
       <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-        Column two   
+        <i class="fa-solid fa-mountain-city"></i>
+        <br />Column two   
         </div>
         <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-          Column three   
+          <i class="fa-solid fa-plane"></i>
+          <br />Column three   
           </div>
           <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-            Column fourth
+            <i class="fa-solid fa-earth-americas"></i>
+            <br />Column fourth
             </div>
       </div> 
   </div>
