--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
   <div class="container-fluid text-center fa-row">
     <div class="row">
       <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-        <i class="fa-solid fa-location-dot"></i>
+        <i class="fa-solid fa-location-dot fa-row-icon"></i>
         <br />Column one   
       </div>
       <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-        <i class="fa-solid fa-mountain-city"></i>
+        <i class="fa-solid fa-mountain-city fa-row-icon"></i>
         <br />Column two   
         </div>
         <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-          <i class="fa-solid fa-plane"></i>
+          <i class="fa-solid fa-plane fa-row-icon"></i>
           <br />Column three   
           </div>
           <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
-            <i class="fa-solid fa-earth-americas"></i>
+            <i class="fa-solid fa-earth-americas fa-row-icon"></i>
             <br />Column fourth
             </div>
       </div> 
