--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
     </nav>
     <!--Ends Top Navbar-->
 
+
+  </header>
+
+
+<main>
+
     <!--Begins Carousel-->
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-indicators">
@@ -99,11 +105,8 @@
     </div>
     <!--Ends Carousel-->
 
-  </header>
 
-
-<main>
-  
+  <!--Begin Font Awesome Row-->
   <div class="container-fluid text-center fa-row">
     <div class="row">
       <div class="col-12 col-xxs-12 col-xs-6 col-sm-6 col-md-6 col-lg-3 col-xl-3 col-xxl-3">
@@ -124,7 +127,16 @@
             </div>
       </div> 
   </div>
+<!--End Font Awesome Row-->
+<div class="container">
+  <div class="row">
+    <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">Content goes here</div>
+    <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">Video goes here</div>
+  </div>
+</div>
+<!--Begin First Paragraph-->
 
+<!--End First Paragraph-->
 </main>
 
   <footer>
