--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 <!--End Font Awesome Row-->
 
 <!--Begin First Paragraph-->
-<div class="container text-center first-paragraph-div">
+<div class="container first-paragraph-div">
   <div class="row">
     <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
       Welcome to DreamEscape, your ultimate online destination for crafting the perfect getaway! Whether you’re seeking a sun-soaked beach, a cozy mountain retreat, or a vibrant city adventure, we’re here to turn your travel dreams into reality. Our user-friendly tools and expert tips make vacation planning a breeze, allowing you to customize every detail from accommodations to activities. With handpicked recommendations and insider insights, DreamEscape ensures you experience your destination like a local. Get ready to pack your bags and embark on an unforgettable journey!
