--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
 <div class="container first-paragraph-div">
   <div class="row">
     <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-      Welcome to DreamEscape, your ultimate online destination for crafting the perfect getaway! Whether you’re seeking a sun-soaked beach, a cozy mountain retreat, or a vibrant city adventure, we’re here to turn your travel dreams into reality. Our user-friendly tools and expert tips make vacation planning a breeze, allowing you to customize every detail from accommodations to activities. With handpicked recommendations and insider insights, DreamEscape ensures you experience your destination like a local. Get ready to pack your bags and embark on an unforgettable journey!
+     <h2> About US</h2>
+      <p>
+       Welcome to DreamEscape, your ultimate online destination for crafting the perfect getaway! Whether you’re seeking a sun-soaked beach, a cozy mountain retreat, or a vibrant city adventure, we’re here to turn your travel dreams into reality. Our user-friendly tools and expert tips make vacation planning a breeze, allowing you to customize every detail from accommodations to activities. With handpicked recommendations and insider insights, DreamEscape ensures you experience your destination like a local. Get ready to pack your bags and embark on an unforgettable journey!
+    </p>
     </div>
     <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
       <img src="https://www.dummyimage.com/600x400/054145/ffffff.jpg" />
@@ -146,7 +149,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h2>Vacation Planning Availabilty</h2>
+      <h2 class="text-center">Vacation Planning Availabilty</h2>
   
       <table class="content-table">
         <thead>
