--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
             
       </table>
     </div>
+
+    <div class="col-12">
+      <h2>Why To Plan With Us!</h2>
+  
+      <ol>
+        <li>Budget Management: Planning helps you set a budget and avoid overspending.</li>
+        <li>Customized Experiences: You can tailor your itinerary to your interests, ensuring a more enjoyable experience.
+            <ul>
+              <li>Enhanced Comfort: You can select accommodations and transportation that suit your comfort level and needs, ensuring a more pleasant stay.</li>
+              <li>Avoiding Crowds: Planning allows you to visit popular sites during off-peak times or choose lesser-known attractions, providing a more serene experience.</li>
+              <li>Memorable Experiences: Tailored trips often lead to more memorable moments that are personally significant, making your vacation truly unique.</li>
+             <li>Unique Activities: Customized planning allows you to include unique experiences, such as local tours, workshops, or off-the-beaten-path excursions that you might not find in standard packages.</li>
+            </ul>
+        </li>
+        <li>Stress Reduction: Having a plan in place can reduce anxiety and stress leading up to the trip.</li>
+        <li>Adventure Preparedness: If you plan outdoor or adventurous activities, you can ensure you have the necessary gear and information</li>
+      </ol>
+    </div>
   </div>
 </div>
 <!--End Table-->
