--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <!---Begin Table-->
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
       <h2 class="text-center">Vacation Planning Availabilty</h2>
   
       <table class="content-table">
@@ -200,7 +200,7 @@
       </table>
     </div>
 
-    <div class="col-12">
+    <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
       <h2>Why To Plan With Us!</h2>
   
       <ol>
