--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <!--End First Paragraph-->
 
 <!---Begin Table-->
-<div class="container-fluid schedule-section">
+<div class="container-fluid schedule-section table-responsive">
 <div class="container">
   <div class="row">
     <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
