--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </p>
     </div>
     <div class="col-12 col-xxs-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-      <img src="https://www.dummyimage.com/600x400/054145/ffffff.jpg" alt="placeholder" class="first-paragraph-img"/>
+      <img src="https://www.dummyimage.com/600x400/054145/ffffff.jpg" alt="placeholder" class="first-paragraph-img img-responsive"/>
     </div>
   </div>
 </div>
