--- a/index.html
+++ b/index.html
@@ -252,7 +252,17 @@
   </main>
 
   <footer>
-    Footer content goes here
+
+    <div class="container text-center footer-row">
+      <div class="row">
+        <div class="col-12">
+          <a href="#"><i class="fa-brands fa-square-x-twitter fa-social-media"></i></a>
+          <a href="#"><i class="fa-brands fa-youtube"></i></a>
+          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+        </div>
+      </div>
+    </div>
   </footer>
 
   <!--JavaScrip goes here-->
