--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <div class="container-fluid schedule-section table-responsive">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
+          <div class="col-12">
             <h2 class="text-center">Vacation Planning Availabilty</h2>
 
             <table class="content-table">
@@ -217,6 +217,16 @@
 
             </table>
           </div>
+        </div>
+      </div>
+    </div>
+    <!--End Table-->
+
+    <!---Begin List-->
+    <div class="container-fluid schedule-section table-responsive">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">IMAGE GOES HERE</div>
 
           <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
             <h2>Why To Plan With Us!</h2>
@@ -246,14 +256,15 @@
         </div>
       </div>
     </div>
-    <!--End Table-->
+    <!--End List-->
+
 
 
   </main>
 
   <footer>
 
-    <div class="container text-center footer-row">
+    <div class="container-fluid text-center footer-row">
       <div class="row">
         <div class="col-12">
           <a href="#"><i class="fa-brands fa-square-x-twitter fa-social-media"></i></a>
