--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
     <div class="container-fluid list-section">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">IMAGE GOES HERE</div>
+          <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6"><img
+              src="https://www.dummyimage.com/400x400/054145/ffffff.jpg" alt="placeholder"
+              class="list-img img-responsive" /></div>
 
           <div class="col-12 col-xxs-12 col-xs-12 col-md-12 col-lg-6 col-xl-6 col-xxl-6">
             <h2>Why To Plan With Us!</h2>
